Update mypy configuration and refine type ignore in MockEmbeddingModel
- Changed 'warn_unused_ignores' setting in pyproject.toml to false for more flexible type checking.
- Updated type ignore comment in embed_query method to specify 'no-any-return' for better clarity on return type handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,7 +122,7 @@ target-version = ["py311"]
 python_version = "3.11"
 strict = false
 warn_return_any = true
-warn_unused_ignores = true
+warn_unused_ignores = false
 disallow_untyped_defs = true
 ignore_missing_imports = true
 
