--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,22 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
 
+      - name: Install PostgreSQL extensions
+        env:
+          PGPASSWORD: test
+        run: |
+          psql -h localhost -U test -d findable_test -c "CREATE EXTENSION IF NOT EXISTS vector;"
+          psql -h localhost -U test -d findable_test -c "CREATE EXTENSION IF NOT EXISTS pg_trgm;"
+          psql -h localhost -U test -d findable_test -c 'CREATE EXTENSION IF NOT EXISTS "uuid-ossp";'
+
+      - name: Run database migrations
+        env:
+          DATABASE_URL: postgresql+asyncpg://test:test@localhost:5432/findable_test
+          REDIS_URL: redis://localhost:6379/0
+          JWT_SECRET: test-secret-key-for-ci
+          ENV: test
+        run: alembic upgrade head
+
       - name: Run tests
         env:
           DATABASE_URL: postgresql+asyncpg://test:test@localhost:5432/findable_test
